<resources>
    <string name="app_name">Dream Bucket</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Welcome to Dream Bucket!</string>
    <string name="nav_header_subtitle">Create or view your wishlist</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_add_wish">Add Wish</string>
    <string name="menu_create_wishlist">Create Wishlist</string>
    <string name="menu_my_wishlists">My Wishlists</string>
    <string name="menu_login">Log In</string>
    <string name="menu_logout">Log Out</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>