<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_add"
            android:title="@string/menu_add_wish" />
        <item
            android:id="@+id/nav_create_wishlist"
            android:icon="@drawable/ic_create"
            android:title="@string/menu_create_wishlist" />
        <item
            android:id="@+id/nav_my_wishlists"
            android:icon="@drawable/ic_wishlist"
            android:title="@string/menu_my_wishlists" />
        <item
            android:id="@+id/nav_login"
            android:icon="@drawable/ic_login"
            android:title="@string/menu_login" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_logout"
            android:title="@string/menu_logout" />
    </group>
</menu>